--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-select": "^2.0.0-beta.7"
+    "react-select": "^2.0.0-beta.7",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
