--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-amplify": "^2.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-material-ui-carousel": "^1.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
